--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,30 @@
-name: Docker Image CI
+name: Test SQL modules
 
 on:
   pull_request:
-    branches: [ "master" ]
-    types: [ "open" ]
 
 jobs:
-
-  build:
-
+  test-modules:
     runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      env:
-          APP_NAME: ${{ secrets.APP_NAME }}
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-          
-      run: |
-          git pull && \
-          docker stop $APP_NAME && \
-          docker rm $APP_NAME && \
-          docker build --no-cache --progress=plain --tag=de-bootcamp/sql-module:latest .
+      - name: 🧾 Checkout code
+        uses: actions/checkout@v3
 
-  check_simple_queries:
-    runs-on: self-hosted
+      - name: ⚙️ Set up Docker Compose
+        run: docker-compose --version
 
-    steps:
-    - uses: actions/checkout@v4
-    - name: Test simple queries tasks
+      - name: 📦 Build services
+        run: docker-compose build
 
-    run: |
-        docker run 
+      - name: 🚀 Fill DB
+        run: docker-compose run --rm filldb
+
+      - name: 🧪 Test simple-queries
+        run: docker-compose run --rm -e MODULE=simple-queries test
+
+      - name: 🧪 Test complex-queries
+        run: docker-compose run --rm -e MODULE=complex-queries test
+
+      - name: 🧪 Test functions
+        run: docker-compose run --rm -e MODULE=functions test
